public/users/yyclxx123@gmail.com/1002/ce.txt
Main.cpp:1:1: error: ‘supervisorctl’ does not name a type
 supervisorctl start laravel-worker:*
 ^
